-
Bug
-
Resolution: Done
-
P2: Important
-
5.4.2, 5.6.3, 5.9.3, 5.10.0, 5.12.5, 5.13.2, 5.14.0 Beta3, 5.15
-
Mac OS X 10.10 (Yosemite), XCode 6.3, macOS 10.13
-
-
7ba75d088c3eba81a1d2bb708119442991d9f30b (qt/qtbase/dev) ec45bf05aa9884f8c7bdd64c0adaa55f408b826b (qt/qtbase/6.2)
The code snippet attached can be used to reproduce the issue
#include <QApplication> #include <QWidget> #include <QTimer> int main(int argc, char *argv[]) { QApplication a(argc, argv); a.setQuitOnLastWindowClosed(false); QWidget w; w.showFullScreen(); QTimer::singleShot(2000, [&]{ w.close(); }); return a.exec(); }
Steps to reproduce:
1. Build and run the example attached.
Expected result:
The window is closed and the dashboard changes to the "main" one
Actual result:
The window is closed and the dashboard is shown black, doesn't return to the "main" dashboard. (use cmd+tab to switch the dashboard).
- relates to
-
QTBUG-52450 macOS: Closing a window that's in fullscreen removes the window, but doesn't exit fullscreen
-
- Closed
-
-
QTBUG-68069 Exiting fullscreen window leaves the application in fullscreen mode on macOS
-
- Closed
-
-
QTBUG-97482 Android: QPushButton with QMenu does not work on Qt6
-
- Closed
-
-
QTBUG-52058 Exiting Youtube full screen end up with gray screen
-
- Closed
-
-
QTBUG-53286 Consistent QWindow close event behavior
-
- Closed
-
- replaces
-
QTBUG-36714 Window can't be fully closed on Mac OS X after calling showFullScreen()
-
- Closed
-
| For Gerrit Dashboard: QTBUG-46701 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 115346,1 | OS X: Fix closing/hiding fullscreen windows leaving empty black spaces | 5.6 | qt/qtbase | Status: ABANDONED | -1 | 0 |
| 123271,1 | OS X: Fix closing/hiding fullscreen windows leaving empty black spaces | dev | qt/qtbase | Status: ABANDONED | 0 | 0 |
| 309895,6 | Test QWindow close() behavior | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 309896,4 | Make QWidget::close() destroy the QWindow | dev | qt/qtbase | Status: ABANDONED | -1 | 0 |
| 319707,3 | QToolTip: don’t close again on Close event | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 368422,5 | QWidget: close the QWindow in QWidget::close | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 368497,2 | QWidget: close the QWindow in QWidget::close | 6.2 | qt/qtbase | Status: MERGED | +2 | 0 |
| 379988,2 | Test QWindow close() behavior | 6.2 | qt/qtbase | Status: MERGED | +2 | 0 |