Qt: Try to fix un-maximize behavior on OS X.

On OS X, create dialogs with valid parents so that we don't trigger
QTBUG-46701. Document QDialog's "on top", maximize, and minimize
behaviors.

Bug: 12544
Change-Id: I32c0ef01dba3f7132e5fd0cd61f9feb654b92009
Reviewed-on: https://code.wireshark.org/review/16127
Reviewed-by: Gerald Combs <gerald@wireshark.org>
Petri-Dish: Gerald Combs <gerald@wireshark.org>
Tested-by: Petri Dish Buildbot <buildbot-no-reply@wireshark.org>
Reviewed-by: Anders Broman <a.broman58@gmail.com>